[project]
name = "dqn-breakout"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ale-py>=0.11.2",
    "autorom[accept-rom-license]>=0.6.1",
    "gymnasium[atari,other]>=1.2.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
